--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="curvaBezier.js"></script>
 <script type="text/javascript" src="curvaBSpline.js"></script>
 <script type="text/javascript" src="supRevolucion.js"></script>
+<script type="text/javascript" src="supBarrido.js"></script>
 
 <script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
@@ -595,7 +596,7 @@
 
         var model_matrix_sup = mat4.create();
         mat4.identity(model_matrix_sup);
-        mat4.scale(model_matrix_sup, model_matrix_sup, [7.0, 7.0, 7.0]);
+        mat4.scale(model_matrix_sup, model_matrix_sup, [3.0, 3.0, 3.0]);
         sup.draw(model_matrix_sup);
     }
 
@@ -633,7 +634,8 @@
 
         curva = new CurvaBSpline([[-5,-5,-5],[-4,-3,-2],[-4,-2,-3],[-3,-2,-3],[-2,0,1],[0,2,-1],[1,1,3],[3,0,2],[2,2,2],[4,3,4],[5,5,4],[5,6,5],[6,6,6]]);
         
-        sup = new SupRevolucion([[1,0,0],[1,0,1],[1,0,2],[1,0,3],[1,0,4],[1,0,5]],[0,0,1],2*Math.PI,0.005);
+        //sup = new SupRevolucion([[0,0,0],[1,1,0],[2,2,0],[3,3,0],[4,4,0],[5,5,0],[0,5,0]],[0,1,0],2*Math.PI,0.002);
+        sup = new SupBarrido([[-1,-1,0],[0,-1,0],[1,-1,0],[1,0,0],[1,1,0],[0,1,0],[-1,1,0],[-1,0,0],[-1,-1,0]], [[0,0,1],[0,0,2],[0,0,3],[0,0,4],[0,0,5]], [ [[1,0,0],[0,1,0],[0,0,1]], [[0,1,0],[0,0,1],[1,0,0]], [[0,0,1],[1,0,0],[0,1,0]], [[0,1,0],[0,0,1],[1,0,0]],[[1,0,0],[0,1,0],[0,0,1]] ]);
 
         gl.clearColor(0.0, 0.0, 0.0, 1.0);
         gl.enable(gl.DEPTH_TEST);
