--- a/main.html
+++ b/main.html
@@ -15,6 +15,8 @@
 <script type="text/javascript" src="curvaBSpline.js"></script>
 <script type="text/javascript" src="supRevolucion.js"></script>
 <script type="text/javascript" src="supBarrido.js"></script>
+<script type="text/javascript" src="perfil.js"></script>
+
 
 <script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
@@ -591,12 +593,12 @@
 
        	var model_matrix_curva = mat4.create();
         mat4.identity(model_matrix_curva);
-        mat4.scale(model_matrix_curva, model_matrix_curva, [7.0, 7.0, 7.0]);
+        //mat4.scale(model_matrix_curva, model_matrix_curva, [7.0, 7.0, 7.0]);
         curva.draw(model_matrix_curva);
 
         var model_matrix_sup = mat4.create();
         mat4.identity(model_matrix_sup);
-        mat4.scale(model_matrix_sup, model_matrix_sup, [3.0, 3.0, 3.0]);
+        //mat4.scale(model_matrix_sup, model_matrix_sup, [3.0, 3.0, 3.0]);
         sup.draw(model_matrix_sup);
     }
 
@@ -632,11 +634,14 @@
         phobos.initBuffers();
         phobos.initTexture("moon.gif");
 
-        curva = new CurvaBSpline([[-5,-5,-5],[-4,-3,-2],[-4,-2,-3],[-3,-2,-3],[-2,0,1],[0,2,-1],[1,1,3],[3,0,2],[2,2,2],[4,3,4],[5,5,4],[5,6,5],[6,6,6]]);
+        //curva = new CurvaBSpline([[-5,-5,-5],[-4,-3,-2],[-4,-2,-3],[-3,-2,-3],[-2,0,1],[0,2,-1],[1,1,3],[3,0,2],[2,2,2],[4,3,4],[5,5,4],[5,6,5],[6,6,6]]);
+        curva = new CurvaBezier([[-5,-5,0],[-4,-3,0],[-4,-2,0],[-3,-2,0],[-2,0,0],[0,2,0],[1,1,0],[3,0,0],[2,2,0],[4,3,0],[5,5,0],[5,6,0],[6,6,0]]);
         
-        //sup = new SupRevolucion([[0,0,0],[1,1,0],[2,2,0],[3,3,0],[4,4,0],[5,5,0],[0,5,0]],[0,1,0],2*Math.PI,0.002);
-        sup = new SupBarrido([[-1,-1,0],[0,-1,0],[1,-1,0],[1,0,0],[1,1,0],[0,1,0],[-1,1,0],[-1,0,0],[-1,-1,0]], [[0,0,1],[0,0,2],[0,0,3],[0,0,4],[0,0,5]], [ [[1,0,0],[0,1,0],[0,0,1]], [[0,1,0],[0,0,1],[1,0,0]], [[0,0,1],[1,0,0],[0,1,0]], [[0,1,0],[0,0,1],[1,0,0]],[[1,0,0],[0,1,0],[0,0,1]] ]);
-
+        perfil = new Perfil();
+        perfil.generarConCurva(curva,0.1);
+        sup = new SupRevolucion(perfil,[0,1,0],2*Math.PI,0.002);
+       /* sup = new SupBarrido([[-1,-1,0],[0,-1,0],[1,-1,0],[1,0,0],[1,1,0],[0,1,0],[-1,1,0],[-1,0,0],[-1,-1,0]], [[0,0,1],[0,0,2],[0,1,3],[0,2,4],[0,2,5]], [ [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]],[[1,0,0],[0,1,0],[0,0,1]] ]);
+*/
         gl.clearColor(0.0, 0.0, 0.0, 1.0);
         gl.enable(gl.DEPTH_TEST);
 
