--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="supRevolucion.js"></script>
 <script type="text/javascript" src="supBarrido.js"></script>
 <script type="text/javascript" src="perfil.js"></script>
+<script type="text/javascript" src="poligono.js"></script>
 
 
 <script id="shader-fs" type="x-shader/x-fragment">
@@ -593,12 +594,13 @@
 
        	var model_matrix_curva = mat4.create();
         mat4.identity(model_matrix_curva);
-        //mat4.scale(model_matrix_curva, model_matrix_curva, [7.0, 7.0, 7.0]);
+        mat4.scale(model_matrix_curva, model_matrix_curva, [7.0, 7.0, 7.0]);
         curva.draw(model_matrix_curva);
 
         var model_matrix_sup = mat4.create();
         mat4.identity(model_matrix_sup);
-        //mat4.scale(model_matrix_sup, model_matrix_sup, [3.0, 3.0, 3.0]);
+        mat4.scale(model_matrix_sup, model_matrix_sup, [3.0, 3.0, 3.0]);
+        //mat4.rotate(model_matrix_sup,model_matrix_sup, 1.5*Math.PI,[1,1,-1])
         sup.draw(model_matrix_sup);
     }
 
@@ -635,13 +637,20 @@
         phobos.initTexture("moon.gif");
 
         //curva = new CurvaBSpline([[-5,-5,-5],[-4,-3,-2],[-4,-2,-3],[-3,-2,-3],[-2,0,1],[0,2,-1],[1,1,3],[3,0,2],[2,2,2],[4,3,4],[5,5,4],[5,6,5],[6,6,6]]);
-        curva = new CurvaBezier([[-5,-5,0],[-4,-3,0],[-4,-2,0],[-3,-2,0],[-2,0,0],[0,2,0],[1,1,0],[3,0,0],[2,2,0],[4,3,0],[5,5,0],[5,6,0],[6,6,0]]);
+        //curva = new CurvaBezier([[-5,-5,0],[-4,-3,0],[-4,-2,0],[-3,-2,0],[-2,0,0],[0,2,0],[1,1,0],[3,0,0],[2,2,0],[4,3,0],[5,5,0],[5,6,0],[6,6,0]]);
         
-        perfil = new Perfil();
-        perfil.generarConCurva(curva,0.1);
-        sup = new SupRevolucion(perfil,[0,1,0],2*Math.PI,0.002);
-       /* sup = new SupBarrido([[-1,-1,0],[0,-1,0],[1,-1,0],[1,0,0],[1,1,0],[0,1,0],[-1,1,0],[-1,0,0],[-1,-1,0]], [[0,0,1],[0,0,2],[0,1,3],[0,2,4],[0,2,5]], [ [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]],[[1,0,0],[0,1,0],[0,0,1]] ]);
-*/
+        //perfil = new Perfil();
+        //perfil.generarConCurva(curva,0.02);
+        //sup = new SupRevolucion(perfil,[0,1,0],2*Math.PI,0.05);
+       
+        curva = new CurvaBezier([[0,-1,0],[1,-1,0],[1,1,0],[0,1,0],[-1,1,0],[-1,-1,0],[0,-1,0]]);
+        poligono = new Poligono();
+        poligono.generarConCurva(curva,0.01);
+
+		//sup = new SupBarrido(poligono,[[0,0,0],[0,0,1],[0,0,2],[0,0,3],[0,0,4]], [ [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,1],[0,-1,1]], [[1,0,0],[0,1,2],[0,-2,1]], [[1,0,0],[0,1,3],[0,-3,1]],[[1,0,0],[0,1,0],[0,0,1]] ]);
+
+		sup = new SupBarrido(poligono,[[0,0,0],[0,0,1],[0,0,2],[0,0,3],[0,0,4]], [ [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]], [[1,0,0],[0,1,0],[0,0,1]],[[1,0,0],[0,1,0],[0,0,1]] ]);
+
         gl.clearColor(0.0, 0.0, 0.0, 1.0);
         gl.enable(gl.DEPTH_TEST);
 
