--- a/pruebas.html
+++ b/pruebas.html
@@ -9,7 +9,9 @@
 <script type="text/javascript" src="webgl-utils.js"></script>
 <script type="text/javascript" src="selfish.js"></script>
 
+
 <script type="text/javascript" src="geometria.js"></script>
+<script type="text/javascript" src="Tapa.js"></script>
 <script type="text/javascript" src="Conjunto.js"></script>
 <script type="text/javascript" src="curva.js"></script>
 <script type="text/javascript" src="curvaBezier.js"></script>
@@ -24,10 +26,10 @@
 <script type="text/javascript" src="arcoInterno.js"></script>
 <script type="text/javascript" src="arcoExterno.js"></script>
 <script type="text/javascript" src="arco.js"></script>
+
 <script type="text/javascript" src="antena.js"></script>
 <script type="text/javascript" src="dobleReceptor.js"></script>
 <script type="text/javascript" src="receptor.js"></script>
-
 
 
 
@@ -470,7 +472,7 @@
         var eye_point = vec3.create();
         vec3.set(eye_point, 0, 10, -50);
         var at_point = vec3.create();
-        vec3.set(at_point, 0, 10, 0);
+        vec3.set(at_point, 20, 0, 20);
         var up_point = vec3.create();
         vec3.set(up_point, 0, 1, 0);
 
