--- a/pruebas.html
+++ b/pruebas.html
@@ -30,6 +30,12 @@
 <script type="text/javascript" src="antena.js"></script>
 <script type="text/javascript" src="dobleReceptor.js"></script>
 <script type="text/javascript" src="receptor.js"></script>
+<script type="text/javascript" src="cuerpoNave.js"></script>
+<script type="text/javascript" src="tapaNaveTrasera.js"></script>
+<script type="text/javascript" src="tapaNaveDelantera.js"></script>
+<script type="text/javascript" src="nave.js"></script>
+<script type="text/javascript" src="brazo.js"></script>
+
 
 
 
@@ -470,9 +476,9 @@
         //mat4.identity(CameraMatrix);
         //mat4.translate(CameraMatrix, CameraMatrix, [0, 0, -60]);
         var eye_point = vec3.create();
-        vec3.set(eye_point, 0, 10, -50);
+        vec3.set(eye_point, 30, 65, -90);
         var at_point = vec3.create();
-        vec3.set(at_point, 20, 0, 20);
+        vec3.set(at_point, 0, 0, 0);
         var up_point = vec3.create();
         vec3.set(up_point, 0, 1, 0);
 
@@ -617,9 +623,9 @@
 
         var model_matrix_sup = mat4.create();
         mat4.identity(model_matrix_sup);
-        mat4.scale(model_matrix_sup, model_matrix_sup, [2.0, 2.0, 2.0]);
+        //mat4.scale(model_matrix_sup, model_matrix_sup, [2.0, 2.0, 2.0]);
         //mat4.translate(model_matrix_sup,model_matrix_sup, [0,-20,0]);
-        //mat4.rotate(model_matrix_sup,model_matrix_sup, 1.5*Math.PI,[1,1,-1])
+        //mat4.rotate(model_matrix_sup,model_matrix_sup, 0.75*Math.PI,[0,1,0])
         sup.draw(model_matrix_sup);
         //sup2.draw(model_matrix_sup);
     }
@@ -675,10 +681,13 @@
 
         //sup = new Paleta(2,2,10,10);
 
-        sup = new EstructuraCentral(0.05,0.02);
+        //sup = new EstructuraCentral(0.05,0.02);
 
         //sup= new Arco(5,Math.PI,0.05);
 
+        //sup = new Nave();
+        sup = new Brazo();
+        
         gl.clearColor(0.0, 0.0, 0.0, 1.0);
         gl.enable(gl.DEPTH_TEST);
 
