--- a/tp2/main.html
+++ b/tp2/main.html
@@ -40,6 +40,7 @@
 <script type="text/javascript" src="luzPuntual.js"></script>
 <script type="text/javascript" src="luzDireccional.js"></script>
 <script type="text/javascript" src="texturedSphere.js"></script>
+<script type="text/javascript" src="galaxia.js"></script>
 
 
 <script id="shader-posta-fs" type="x-shader/x-fragment">
@@ -85,7 +86,7 @@
 		
 		uniform sampler2D uSampler; //MAGIC
 		uniform sampler2D uNormalSampler;
-		uniform samplerCube uCubeSampler;
+		uniform sampler2D uReflectionSampler;
 		//ver si hace falta un sampler para la reflexion 2D
 		
 		void main() {
@@ -121,9 +122,13 @@
 
             if (uUseReflection) 
             {
-				vec3 lookup = reflect(viewDir, normal);
-				color = mix(color, vec3(textureCube(uCubeSampler, lookup)), uReflectiveness); //MIRAR
-			}
+                vec3 reflectDir = normalize(reflect(viewDir, normal));
+                vec2 reflectDir2D = vec2(reflectDir.x,reflectDir.y);
+                vec4 enviromentColor = texture2D(uReflectionSampler, reflectDir2D ); 
+                color = vec3(mix(vec4(color,1.0), enviromentColor, uReflectiveness).rgb);
+                //gl_FragColor = vec4(mix(vec4(color,1.0), enviromentColor, uReflectiveness).rgb, 1.0);
+                return;			 
+            }
 			 
 			
             vec3 color_final =vec3(0.0,0.0,0.0);
@@ -390,8 +395,8 @@
         gl.uniform1i(glProgram.uSampler, 0);
         glProgram.uNormalSampler = gl.getUniformLocation(glProgram, "uNormalSampler");
         gl.uniform1i(glProgram.uNormalSampler, 1);
-        glProgram.uCubeSampler = gl.getUniformLocation(glProgram, "uCubeSampler");
-        gl.uniform1i(glProgram.uCubeSampler, 2);
+        glProgram.uReflectionSampler = gl.getUniformLocation(glProgram, "uReflectionSampler");
+        gl.uniform1i(glProgram.uReflectionSampler, 2);
         //glProgram.uHeightSampler = gl.getUniformLocation(glProgram, "uHeightSampler");
         //gl.uniform1i(glProgram.uHeightSampler, 3);
         gl.activeTexture(gl.TEXTURE0);
@@ -451,6 +456,8 @@
     var deimos = null;
     var mars = null;
     var phobos = null;
+
+    enviromentReflectionTexture = null;
 
     var deimosRotationMatrix = mat4.create();
     mat4.identity(deimosRotationMatrix);
@@ -876,6 +883,8 @@
         gl.uniform3f(glProgram.uColorSpecular, 0.5,0.5,0.5);
         gl.uniform3fv(glProgram.uViewPos,puntoOjo);
 
+        galaxia.draw();
+
         var model_matrix_estacion = mat4.create();
         mat4.identity(model_matrix_estacion);
         mat4.scale(model_matrix_estacion, model_matrix_estacion, [2.0, 2.0, 2.0]);
@@ -897,7 +906,6 @@
 
     }
 
-
     function tick() {
         requestAnimFrame(tick);
         var newRotationMatrix = mat4.create();
@@ -911,7 +919,34 @@
         drawScene();
     }
 
+    function initReflectionTexture()
+    {
+        var aux_texture = gl.createTexture();
+        this.texture = aux_texture;
+        this.texture.image = new Image();
+        var self = this;
+        this.texture.image.onload = function () {
+            gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
+            gl.bindTexture(gl.TEXTURE_2D, self.texture);
+            gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, self.texture.image);
+            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
+            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR_MIPMAP_NEAREST);
+            gl.generateMipmap(gl.TEXTURE_2D);
 
+            gl.bindTexture(gl.TEXTURE_2D, null);
+        }
+        this.texture.image.src = 'maps/refMap.jpg';
+
+        enviromentReflectionTexture = this.texture;
+        setReflectionTextureUniform(enviromentReflectionTexture);
+    }
+
+    function setReflectionTextureUniform() 
+    {
+        gl.activeTexture(gl.TEXTURE2);
+        gl.bindTexture(gl.TEXTURE_2D, enviromentReflectionTexture);
+        gl.uniform1i(glProgram.reflectionSample, 2);
+    }
 
     function webGLStart() {
         var canvas = document.getElementById("clase03-vertex shader");
@@ -931,6 +966,8 @@
         initGL(canvas);
         initShaders();
 
+        initReflectionTexture();
+
         luzSol = new LuzDireccional(vec3.fromValues(1, 0, 0), 
                                     vec3.fromValues(1.0, 1.0, 1.0),
                                     vec3.fromValues(5.0, 5.0, 5.0));
@@ -939,6 +976,8 @@
                                         vec3.fromValues(0.0, 0.0, 1.0), 
                                         vec3.fromValues(1.0, 1.0, 1.0));
 
+
+        galaxia = new Galaxia(500);
 
         deimos = new TexturedSphere(64, 64);
         deimos.initTexture("earthh.jpg");
